# dl-inference

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/ocr/: CMakeLists.txt  ocr.cpp
apps/ocr/include/: ocr.h
apps/server/: CMakeLists.txt  base64.cpp  ocr_server.cpp
apps/server/include/: base64.h  black_magic.h  crow.h  crow_base_rule.h  crow_config.h  crow_detail.h  crow_hash.h  crow_http_parser.h  crow_json.h  crow_log.h  crow_parser.h  crow_request.h  crow_response.h  crow_server.h  crow_sha1.h  crow_websocket.h  http_method.h  mustache.h  qs_parse.h
cmake/: Utils.cmake  boost.cmake  json.cmake  zlib.cmake
data/testdata/: .gitignore  document1.json  pse_config.json
docker/: Dockerfile  build_image.sh  dev.Dockerfile  docker-entrypoint.sh
modules/: CMakeLists.txt
modules/core/: CMakeLists.txt  base_core.cpp  file_util.cpp  util.cpp
modules/core/include/: base_core.h  util.h
modules/text_detection/: CMakeLists.txt  connected_self.cpp  td.cpp  test_pse.cpp
modules/text_detection/include/: td.h  td_config.h  test_pse.h
modules/text_recognition/: CMakeLists.txt  tr.cpp
modules/text_recognition/include/: tr.h  tr_config.h
samples/: CMakeLists.txt  min_ele_index.cpp  sample.cpp  shuffle_get_file.cpp  tensor_interpolate.cpp  tensor_solve_linear.cpp  test_perspective.cpp  throw_exception.cpp
scripts/: convert_crnn_torch_script.py  convert_np_to_json.py  convert_pse_torch_script.py  test_api.py  test_consumer.py  test_transform.py
test/: CMakeLists.txt  test_config.cpp  test_core.cpp  test_load_model.cpp  test_ocr.cpp  test_text_detection.cpp  test_text_recognition.cpp
