add_subdirectory(core)

set(DL_CORE_INCLUDE_DIRS ${DL_CORE_INCLUDE_DIRS} PARENT_SCOPE)
set(DL_CORE_LIBRARIES ${DL_CORE_LIBRARIES} PARENT_SCOPE)


add_subdirectory(text_detection)
set(TEXT_DETECTION_INCLUDE_DIRS ${TEXT_DETECTION_INCLUDE_DIRS} PARENT_SCOPE)
set(TEXT_DETECTION_LIBRARIES ${TEXT_DETECTION_LIBRARIES} PARENT_SCOPE)


add_subdirectory(text_recognition)
set(TEXT_RECOGNITION_INCLUDE_DIRS ${TEXT_RECOGNITION_INCLUDE_DIRS} PARENT_SCOPE)
set(TEXT_RECOGNITION_LIBRARIES ${TEXT_RECOGNITION_LIBRARIES} PARENT_SCOPE)


