message("-- building text detection module,source dir:${CMAKE_CURRENT_SOURCE_DIR}, core include:${DL_CORE_INCLUDE_DIRS}")
message("-- building with json libraries:${JSON_LIBRARIES}")
message("-- building with opencv libraries:${OPENCV_LIBRARIES}")
message("-- building with dl core libraries:${DL_CORE_LIBRARY}")
set(TEXT_DETECTION_LIBRARY text_detection CACHE INTERNAL "")
include_directories(include ${DL_CORE_INCLUDE_DIRS})


file(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
add_library(${TEXT_DETECTION_LIBRARY} SHARED ${SOURCE_FILES})
target_link_libraries(${TEXT_DETECTION_LIBRARY} ${TORCH_LIBRARIES} ${DL_CORE_LIBRARY} ${JSON_LIBRARIES} ${OPENCV_LIBRARIES})
set_property(TARGET ${TEXT_DETECTION_LIBRARY} PROPERTY CXX_STANDARD 17)

set(TEXT_DETECTION_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
set(TEXT_DETECTION_INCLUDE_DIR "${TEXT_DETECTION_SOURCE_DIR}/include" CACHE INTERNAL "")

install(FILES ${HEADER_FILES}
        DESTINATION ${CMAKE_INSTALL_PREFIX}/include COMPONENT dev)
install(TARGETS ${TEXT_DETECTION_LIBRARY}
        LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib COMPONENT libs)

set(TEXT_DETECTION_INCLUDE_DIRS ${TEXT_DETECTION_INCLUDE_DIR} PARENT_SCOPE)
set(TEXT_DETECTION_LIBRARIES ${TEXT_DETECTION_LIBRARY} PARENT_SCOPE)

message("-- text detection config with library name:${TEXT_DETECTION_LIBRARY}")